[tool.poetry]
name = "electiontool"
version = "0.1.0"
description = "Convert data from Dutch elections in EML XML files to a CSV file that has data per party per stemburea."
authors = ["Hay Kranen <huskyr@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
dataknead = "^0.2.0"
xmltodict = "^0.12.0"
dpath = "^1.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
